Add TestProcess WF + GetStrategy
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22650

--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Data/Vanrise.Fzero.FraudAnalysis.Data.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Data/Vanrise.Fzero.FraudAnalysis.Data.csproj
@@ -46,6 +46,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FraudDataManagerFactory.cs" />
+    <Compile Include="IDataManager.cs" />
+    <Compile Include="IStrategyDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
