Restructured CDR Processes
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22668

--- a/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
@@ -81,7 +81,7 @@
     <Compile Include="ProcessBillingCDR.cs" />
     <Compile Include="InitializeObjects.cs" />
     <Compile Include="LoadCDRs.cs" />
-    <Compile Include="ProcessCDRs.cs">
+    <Compile Include="OLD\ProcessCDRs.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="ProcessRawCDRs.cs" />
