--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Data.MySQL/Vanrise.Fzero.FraudAnalysis.Data.MySQL.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Data.MySQL/Vanrise.Fzero.FraudAnalysis.Data.MySQL.csproj
@@ -53,9 +53,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MySQLManager.cs" />
+    <Compile Include="CDRDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StrategyDataManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.Fzero.FraudAnalysis.Data\Vanrise.Fzero.FraudAnalysis.Data.csproj">
