git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22670

--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Data/Vanrise.Fzero.FraudAnalysis.Data.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Data/Vanrise.Fzero.FraudAnalysis.Data.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="FraudDataManagerFactory.cs" />
     <Compile Include="IDataManager.cs" />
+    <Compile Include="INumberProfileDataManager.cs" />
     <Compile Include="IStrategyDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
