--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Data.MySQL/Vanrise.Fzero.FraudAnalysis.Data.MySQL.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Data.MySQL/Vanrise.Fzero.FraudAnalysis.Data.MySQL.csproj
@@ -53,7 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CDRDataManager.cs" />
+    <Compile Include="NumberProfileDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
