--- a/Vanrise/Code/Vanrise.Data.SQL/Vanrise.Data.SQL.csproj
+++ b/Vanrise/Code/Vanrise.Data.SQL/Vanrise.Data.SQL.csproj
@@ -57,6 +57,7 @@
       <HintPath>..\Resources\DLLs\Microsoft.Practices.EnterpriseLibrary.Data.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
