git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22689

--- a/CDRAnalysis/Vanrise.Fzero.DevRuntime/App.config
+++ b/CDRAnalysis/Vanrise.Fzero.DevRuntime/App.config
@@ -17,7 +17,7 @@
   </connectionStrings>
 
   <appSettings>
-    
+    <add key="NumberProfileBatchSize" value="100000" />
     <add key="SERVER" value="192.168.110.241" />
     <add key="Server_Username" value="root" />
     <add key="Server_Pasword" value="P@ssw0rd" />
