--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.BP.Activities/Vanrise.Fzero.FraudAnalysis.BP.Activities.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.BP.Activities/Vanrise.Fzero.FraudAnalysis.BP.Activities.csproj
@@ -39,6 +39,7 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Activities" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Runtime.Serialization" />
@@ -63,6 +64,9 @@
   <ItemGroup>
     <Compile Include="GetCriteriaDefinition.cs" />
     <Compile Include="GetStrategy.cs" />
+    <Compile Include="LoadNumberProfile.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -73,6 +77,10 @@
     <ProjectReference Include="..\Vanrise.Fzero.FraudAnalysis.Business\Vanrise.Fzero.FraudAnalysis.Business.csproj">
       <Project>{c195cfd3-948d-447c-83b4-3365d0515ec9}</Project>
       <Name>Vanrise.Fzero.FraudAnalysis.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.Fzero.FraudAnalysis.Data.MySQL\Vanrise.Fzero.FraudAnalysis.Data.MySQL.csproj">
+      <Project>{dd4f4480-110d-4bc4-8ea0-688fc59c9b34}</Project>
+      <Name>Vanrise.Fzero.FraudAnalysis.Data.MySQL</Name>
     </ProjectReference>
     <ProjectReference Include="..\Vanrise.Fzero.FraudAnalysis.Data\Vanrise.Fzero.FraudAnalysis.Data.csproj">
       <Project>{521364bc-ae3d-4eca-8392-44a6c1961939}</Project>
