--- a/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
@@ -68,6 +68,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplyInvalidCDRsToDB.cs" />
+    <Compile Include="ApplyMainCDRsToDB.cs" />
     <Compile Include="ClearTimeRangeBillingRecords.cs" />
     <Compile Include="CreateBillingAndStatsTables.cs" />
     <Compile Include="DivideDayIntoTimeRanges.cs" />
@@ -78,12 +80,15 @@
     <Compile Include="Entities\CDRSharedQueueManager.cs" />
     <Compile Include="GenerateTrafficStatistics.cs" />
     <Compile Include="ImportCDRs.cs" />
+    <Compile Include="PrepareInvalidCDRsForDBApply.cs" />
+    <Compile Include="PrepareMainCDRsForDBApply.cs" />
     <Compile Include="ProcessBillingCDR.cs" />
     <Compile Include="InitializeObjects.cs" />
     <Compile Include="LoadCDRs.cs" />
     <Compile Include="OLD\ProcessCDRs.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="GenerateBillingAndPricingCDRs.cs" />
     <Compile Include="ProcessRawCDRs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UpdateTrafficStatisticsInDB.cs" />
