--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Data.MySQL/Vanrise.Fzero.FraudAnalysis.Data.MySQL.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Data.MySQL/Vanrise.Fzero.FraudAnalysis.Data.MySQL.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MySQLManager.cs" />
+    <Compile Include="Helper.cs" />
     <Compile Include="NumberProfileDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StrategyDataManager.cs" />
