--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.BP.Activities/Vanrise.Fzero.FraudAnalysis.BP.Activities.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.BP.Activities/Vanrise.Fzero.FraudAnalysis.BP.Activities.csproj
@@ -63,6 +63,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GetCriteriaValue.cs" />
     <Compile Include="GetCriteriaDefinition.cs" />
     <Compile Include="GetStrategy.cs" />
     <Compile Include="LoadNumberProfile.cs">
