--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.BP.Activities/Vanrise.Fzero.FraudAnalysis.BP.Activities.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.BP.Activities/Vanrise.Fzero.FraudAnalysis.BP.Activities.csproj
@@ -70,6 +70,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StoreSuspiciousNumbers.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.Fzero.FraudAnalysis.Arguments\Vanrise.Fzero.FraudAnalysis.BP.Arguments.csproj">
