--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Data.MySQL/Vanrise.Fzero.FraudAnalysis.Data.MySQL.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Data.MySQL/Vanrise.Fzero.FraudAnalysis.Data.MySQL.csproj
@@ -58,6 +58,7 @@
     <Compile Include="NumberProfileDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StrategyDataManager.cs" />
+    <Compile Include="SuspiciousNumberDataManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.Fzero.FraudAnalysis.Data\Vanrise.Fzero.FraudAnalysis.Data.csproj">
