--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Data/Vanrise.Fzero.FraudAnalysis.Data.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Data/Vanrise.Fzero.FraudAnalysis.Data.csproj
@@ -48,8 +48,10 @@
   <ItemGroup>
     <Compile Include="FraudDataManagerFactory.cs" />
     <Compile Include="IDataManager.cs" />
+    <Compile Include="IFraudDataManager.cs" />
     <Compile Include="INumberProfileDataManager.cs" />
     <Compile Include="IStrategyDataManager.cs" />
+    <Compile Include="ISuspiciousNumberDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
