--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Entities/Vanrise.Fzero.FraudAnalysis.Entities.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Entities/Vanrise.Fzero.FraudAnalysis.Entities.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Strategy.cs" />
     <Compile Include="SuspiciousNumber.cs" />
+    <Compile Include="SuspiciousNumberBatch.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
