--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.BP.Activities/Vanrise.Fzero.FraudAnalysis.BP.Activities.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.BP.Activities/Vanrise.Fzero.FraudAnalysis.BP.Activities.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CalculateCriteriaValues.cs" />
+    <Compile Include="CalculateSuspiciousLevel.cs" />
     <Compile Include="GetCriteriaDefinition.cs" />
     <Compile Include="GetStrategy.cs" />
     <Compile Include="LoadNumberProfile.cs">
