--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -191,6 +191,9 @@
     <Content Include="Client\Javascripts\Directives\Chart\vr-chart-directive.js" />
     <Content Include="Client\Javascripts\Directives\Containers\vr-columns-directive.js" />
     <Content Include="Client\Javascripts\Directives\DataGrid\vr-datagrid-directive.js" />
+    <Content Include="Client\Javascripts\Directives\DataGrid\vr-datagridcell-directive.js" />
+    <Content Include="Client\Javascripts\Directives\DataGrid\vr-datagridcolumn-directive.js" />
+    <Content Include="Client\Javascripts\Directives\DataGrid\vr-datagridrows-directive.js" />
     <Content Include="Client\Javascripts\Directives\Inputs\Select\vr-select-directive.js" />
     <Content Include="Client\Javascripts\Directives\Inputs\Switch\vr-switch-directive.js" />
     <Content Include="Client\Javascripts\Directives\Inputs\DatePicker\vr-datetimepicker-directive.js" />
@@ -213,7 +216,6 @@
     <Content Include="Client\Javascripts\Services\base-dir-service.js" />
     <Content Include="Client\Javascripts\Directives\Button\button-dir-service.js" />
     <Content Include="Client\Javascripts\Services\CarrierTypeEnum.js" />
-    <Content Include="Client\Javascripts\Directives\DataGrid\datagrid-dir-service.js" />
     <Content Include="Client\Javascripts\Services\multitransclude-service.js" />
     <Content Include="Client\Javascripts\Services\carrier-service.js" />
     <Content Include="Client\Javascripts\Directives\Chart\chart-dir-service.js" />
