--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.BP/Vanrise.Fzero.FraudAnalysis.BP.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.BP/Vanrise.Fzero.FraudAnalysis.BP.csproj
@@ -58,8 +58,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExecuteStrategyProcess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestProcess.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.Fzero.FraudAnalysis.Arguments\Vanrise.Fzero.FraudAnalysis.BP.Arguments.csproj">
@@ -80,7 +80,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <XamlAppDef Include="TestProcess.xaml">
+    <XamlAppDef Include="ExecuteStrategyProcess.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </XamlAppDef>
