--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Business/Vanrise.Fzero.FraudAnalysis.Business.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Business/Vanrise.Fzero.FraudAnalysis.Business.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CriteriaManager.cs" />
+    <Compile Include="FraudAnalysisQueueFactory.cs" />
     <Compile Include="FraudManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StrategyManager.cs" />
