--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Entities/Vanrise.Fzero.FraudAnalysis.Entities.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Entities/Vanrise.Fzero.FraudAnalysis.Entities.csproj
@@ -54,6 +54,7 @@
     <Compile Include="NumberProfileBatch.cs" />
     <Compile Include="NumberProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueueName.cs" />
     <Compile Include="Strategy.cs" />
     <Compile Include="SuspiciousNumber.cs" />
     <Compile Include="SuspiciousNumberBatch.cs" />
