Add new activity GetSuspicious Number
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22724

--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.BP.Activities/Vanrise.Fzero.FraudAnalysis.BP.Activities.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.BP.Activities/Vanrise.Fzero.FraudAnalysis.BP.Activities.csproj
@@ -67,6 +67,7 @@
     <Compile Include="CalculateSuspiciousLevel.cs" />
     <Compile Include="GetCriteriaDefinition.cs" />
     <Compile Include="GetStrategy.cs" />
+    <Compile Include="GetSuspiciousNumber.cs" />
     <Compile Include="LoadNumberProfile.cs">
       <SubType>Code</SubType>
     </Compile>
