Refactoring Repricing Traffic Stats
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22753

--- a/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Entities\CDRBillingBatch.cs" />
     <Compile Include="Entities\CDRManager.cs" />
     <Compile Include="Entities\CDRSharedQueueManager.cs" />
+    <Compile Include="GenerateTrafficStatisticsForRepricing.cs" />
     <Compile Include="GenerateTrafficStatistics.cs" />
     <Compile Include="ImportCDRs.cs" />
     <Compile Include="PrepareInvalidCDRsForDBApply.cs" />
