Update Build Routes with the ability to build only LCR
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22766

--- a/TOneV2/Code/TOneV2/TOne.LCR.Data.SQL/TOne.LCR.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Data.SQL/TOne.LCR.Data.SQL.csproj
@@ -35,6 +35,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -55,6 +56,7 @@
   <ItemGroup>
     <Compile Include="CodePrefixGroupDataManager.cs" />
     <Compile Include="MasterDatabaseDataManager.cs" />
+    <Compile Include="OldRoutingDataManager.cs" />
     <Compile Include="RouteDetailDataManager.cs" />
     <Compile Include="RouteRulesDataManager.cs" />
     <Compile Include="RoutingDataManager.cs" />
