--- a/TOneV2/Code/TOneV2/TOne.RuntimeService/TOne.RuntimeService.csproj
+++ b/TOneV2/Code/TOneV2/TOne.RuntimeService/TOne.RuntimeService.csproj
@@ -236,11 +236,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Service1.cs">
+    <Compile Include="ServiceInstaller.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Service1.Designer.cs">
-      <DependentUpon>Service1.cs</DependentUpon>
+    <Compile Include="ServiceInstaller.Designer.cs">
+      <DependentUpon>ServiceInstaller.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TOneV2Service.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="TOneV2Service.Designer.cs">
+      <DependentUpon>TOneV2Service.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -360,8 +366,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Service1.resx">
-      <DependentUpon>Service1.cs</DependentUpon>
+    <EmbeddedResource Include="ServiceInstaller.resx">
+      <DependentUpon>ServiceInstaller.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TOneV2Service.resx">
+      <DependentUpon>TOneV2Service.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
