git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22775

--- a/CDRAnalysis/Vanrise.Fzero.MobileCDRAnalysis.Website/Web.config
+++ b/CDRAnalysis/Vanrise.Fzero.MobileCDRAnalysis.Website/Web.config
@@ -24,14 +24,14 @@
     <pages theme="skins" />
   </system.web>
   <connectionStrings>
-    <!-- <add name="CDRAnalysisMobileConnectionString" connectionString="Data Source=192.168.110.240;Initial Catalog=CDRAnalysisMobile;User ID=sa;Password=iraq@cce$$1;MultipleActiveResultSets=True;Application Name=EntityFramework"
+    <!-- <add name="CDRAnalysisMobileConnectionString" connectionString="Data Source=192.168.110.240;Initial Catalog=CDRAnalysisMobile_WF;User ID=sa;Password=iraq@cce$$1;MultipleActiveResultSets=True;Application Name=EntityFramework"
        providerName="System.Data.SqlClient" />
-    <add name="MobileEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;server=192.168.110.240;user id=sa;password=iraq@cce$$1;persistsecurityinfo=True;database=CDRAnalysisMobile&quot;"
+    <add name="MobileEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;server=192.168.110.240;user id=sa;password=iraq@cce$$1;persistsecurityinfo=True;database=CDRAnalysisMobile_WF&quot;"
       providerName="System.Data.EntityClient" />-->
 
-    <add name="CDRAnalysisMobileConnectionString" connectionString="server=192.168.110.241;user id=zain;password=zain123;persistsecurityinfo=True;database=CDRAnalysisMobile"
+    <add name="CDRAnalysisMobileConnectionString" connectionString="server=192.168.110.241;user id=zain;password=zain123;persistsecurityinfo=True;database=CDRAnalysisMobile_WF"
       providerName="MySql.Data.MySqlClient" />
-    <add name="MobileEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=192.168.110.241;user id=zain;password=zain123;persistsecurityinfo=True;database=CDRAnalysisMobile&quot;"
+    <add name="MobileEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=192.168.110.241;user id=zain;password=zain123;persistsecurityinfo=True;database=CDRAnalysisMobile_WF&quot;"
      providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
@@ -42,7 +42,7 @@
     <add key="AutomaticUploadPath" value="C:\\FMS_Import\\Automatic\\"/>
     <add key="SQLType" value="MySQL"/>
     <add key="SERVER" value="192.168.110.241" />
-    <add key="DATABASE" value="CDRAnalysisMobile" />
+    <add key="DATABASE" value="CDRAnalysisMobile_WF" />
     <add key="UID" value="zain" />
     <add key="PASSWORD" value="zain123" />
     <add key="FTP_Username" value="root" />
