--- a/CDRAnalysis/Vanrise.Fzero.MobileCDRAnalysis.Services.Mysql/App.config
+++ b/CDRAnalysis/Vanrise.Fzero.MobileCDRAnalysis.Services.Mysql/App.config
@@ -10,7 +10,7 @@
     <!--60 minutes-->
 
     <!--<add key="SERVER" value="192.168.110.241" />
-    <add key="DATABASE" value="CDRAnalysisMobile" />
+    <add key="DATABASE" value="CDRAnalysisMobile_WF" />
     <add key="UID" value="zain" />
     <add key="PASSWORD" value="zain123" />
     <add key="FTP_Username" value="root" />
