Added UI directives and enhancements
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22799

--- a/TOneV2/Code/TOneV2/TOne.Entities/TOne.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Entities/TOne.Entities.csproj
@@ -106,6 +106,7 @@
     <Compile Include="CacheObjectType.cs" />
     <Compile Include="GenericEntity.cs" />
     <Compile Include="GenericEntityStatus.cs" />
+    <Compile Include="Security\SecureActionAttribute.cs" />
     <Compile Include="Security\AuthenticationOutput.cs" />
     <Compile Include="CodeList.cs" />
     <Compile Include="CodeNode.cs" />
@@ -118,6 +119,7 @@
     <Compile Include="Security\RolePermission.cs" />
     <Compile Include="Security\Role.cs" />
     <Compile Include="Security\RoleMember.cs" />
+    <Compile Include="Security\SecureControllerAttribute.cs" />
     <Compile Include="SwitchInfo.cs" />
     <Compile Include="TempTableName.cs" />
     <Compile Include="TOneQueue.cs" />
