--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -190,6 +190,7 @@
     <Content Include="Client\Javascripts\Directives\Button\vr-button-directive.js" />
     <Content Include="Client\Javascripts\Directives\Chart\vr-chart-directive.js" />
     <Content Include="Client\Javascripts\Directives\Containers\vr-columns-directive.js" />
+    <Content Include="Client\Javascripts\Directives\Containers\vr-section-directive.js" />
     <Content Include="Client\Javascripts\Directives\DataGrid\vr-datagrid-directive.js" />
     <Content Include="Client\Javascripts\Directives\DataGrid\vr-datagridcell-directive.js" />
     <Content Include="Client\Javascripts\Directives\DataGrid\vr-datagridcolumn-directive.js" />
@@ -200,6 +201,7 @@
     <Content Include="Client\Javascripts\Directives\Inputs\Validation\vrValidationArray.js" />
     <Content Include="Client\Javascripts\Directives\Inputs\Validation\vrValidationCustom.js" />
     <Content Include="Client\Javascripts\Directives\Inputs\Validation\vrValidationValue.js" />
+    <Content Include="Client\Javascripts\Directives\Loader\vr-loader-directive.js" />
     <Content Include="Client\Javascripts\Directives\Old\vr-dropdown-directive.js" />
     <Content Include="Client\Javascripts\Directives\Inputs\Form\vr-form-directive.js" />
     <Content Include="Client\Javascripts\Directives\Old\vr-gridview-directive.js" />
@@ -208,6 +210,8 @@
     <Content Include="Client\Javascripts\Directives\Containers\vr-panel-directive.js" />
     <Content Include="Client\Javascripts\Directives\Inputs\Textbox\vr-textbox-directive.js" />
     <Content Include="Client\Javascripts\Directives\Inputs\Validation\vr-validation.js" />
+    <Content Include="Client\Javascripts\Directives\Pagination\vr-pagination-directive.js" />
+    <Content Include="Client\Javascripts\Directives\Pagination\vr-pagination.html" />
     <Content Include="Client\Javascripts\Modules\appControllers.js" />
     <Content Include="Client\Javascripts\Modules\mainModule.js" />
     <Content Include="Client\Javascripts\Modules\appRouting.js" />
@@ -499,6 +503,7 @@
     <Content Include="Client\Libraries\Semantic\themes\default\assets\images\flags.png" />
     <Content Include="Client\Styles\angular-notify.css" />
     <Content Include="Client\Styles\angular-ui-switch.css" />
+    <Content Include="Client\Styles\loader.css" />
     <Content Include="Client\Styles\loader.gif" />
     <Content Include="Client\Styles\ng-sortable.style.css" />
     <Content Include="Client\Styles\simple-sidebar.css" />
