Testing of Repricing Prcoess
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22800

--- a/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
@@ -68,6 +68,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplyTrafficStatsToDB.cs" />
     <Compile Include="ApplyInvalidCDRsToDB.cs" />
     <Compile Include="ApplyMainCDRsToDB.cs" />
     <Compile Include="ClearTimeRangeBillingRecords.cs" />
@@ -82,6 +83,7 @@
     <Compile Include="GenerateTrafficStatistics.cs" />
     <Compile Include="ImportCDRs.cs" />
     <Compile Include="PrepareInvalidCDRsForDBApply.cs" />
+    <Compile Include="PrepareTrafficStatsForDBApply.cs" />
     <Compile Include="PrepareMainCDRsForDBApply.cs" />
     <Compile Include="ProcessBillingCDR.cs" />
     <Compile Include="InitializeObjects.cs" />
