--- a/TOneV2/Code/TOneV2/TestRuntime/app.config
+++ b/TOneV2/Code/TOneV2/TestRuntime/app.config
@@ -182,6 +182,8 @@
     <add key="AddBusinessProcessConsoleTracking" value="true"/>
     <add key="DropOldRoutingDatabasesInterval" value="00:01:00"/>
     <add key="BusinessProcessServiceHost" value="localhost:1849"/>
+    <add key="BusinessProcessDisabledNamedPipeService" value="true"/>
+    
   </appSettings>
   <system.codedom>
     <compilers>
