git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22807

--- a/CDRAnalysis/Vanrise.Fzero.DevRuntime/Vanrise.Fzero.DevRuntime.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.DevRuntime/Vanrise.Fzero.DevRuntime.csproj
@@ -103,6 +103,9 @@
     <Reference Include="Vanrise.Data">
       <HintPath>..\Dependencies\VanriseFramework\Vanrise.Data.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Data.MySQL">
+      <HintPath>..\Dependencies\VanriseFramework\Vanrise.Data.MySQL.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Data.SQL">
       <HintPath>..\Dependencies\VanriseFramework\Vanrise.Data.SQL.dll</HintPath>
     </Reference>
