TEsting of Repricing Process
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22822

--- a/TOneV2/Code/TOneV2/TestRuntime/app.config
+++ b/TOneV2/Code/TOneV2/TestRuntime/app.config
@@ -169,21 +169,22 @@
   <appSettings>
     <add key="TABS License" value="BF-2F-B4-CD-36-CB-1D-4B-8F-55-1C-F4-99-CD-1B-E8::==QMwkDM5EDMyYjM4ADNxAjM:kVGdwlncj5WR09mT"/>
     <add key="LoggerPath" value="/TOne_RePricingService/Logger"/>
-    <add key="hibernate.connection.connection_string" value="Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123"/>
-    <add key="SecondaryConnetionString" value="Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123"/>
+    <!--<add key="hibernate.connection.connection_string" value="Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123"/>-->
+    <add key="hibernate.connection.connection_string" value="Server=192.168.110.180\redundant;Database=TOneSpactronNEW;User ID=sa;Password=development@cce$$"></add>
+    <!--<add key="SecondaryConnetionString" value="Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123"/>-->
     <!--<add key="RepricingFrom" value="2014-07-07"/>
     <add key="RepricingTo" value="2014-07-07"/>-->
-    <add key="RepricingFrom" value="2014-03-01"/>
-    <add key="RepricingTo" value="2014-03-01"/>
+    <add key="RepricingFrom" value="2014-07-04"/>
+    <add key="RepricingTo" value="2014-07-04"/>
     <add key="RuntimeConnStringKey" value="TransactionDBConnString"/>
     <add key="QueueDBConnStringKey" value="TransactionDBConnString"/>
     <add key="BusinessProcessDBConnStringKey" value="TransactionDBConnString"/>
-    <add key="BusinessProcessTrackingDBConnStringKey" value="LogDBConnString"/>    
+    <add key="BusinessProcessTrackingDBConnStringKey" value="LogDBConnString"/>
     <add key="AddBusinessProcessConsoleTracking" value="true"/>
     <add key="DropOldRoutingDatabasesInterval" value="00:01:00"/>
     <add key="BusinessProcessServiceHost" value="localhost:1849"/>
     <add key="BusinessProcessDisabledNamedPipeService" value="true"/>
-    
+
   </appSettings>
   <system.codedom>
     <compilers>
