--- a/CDRAnalysis/Vanrise.Fzero.MobileCDRAnalysis.Website/Web.config
+++ b/CDRAnalysis/Vanrise.Fzero.MobileCDRAnalysis.Website/Web.config
@@ -24,9 +24,9 @@
     <pages theme="skins" />
   </system.web>
   <connectionStrings>
-    <!-- <add name="CDRAnalysisMobileConnectionString" connectionString="Data Source=192.168.110.240;Initial Catalog=CDRAnalysisMobile_WF;User ID=sa;Password=iraq@cce$$1;MultipleActiveResultSets=True;Application Name=EntityFramework"
+    <!-- <add name="CDRAnalysisMobileConnectionString" connectionString="Data Source=192.168.110.185;Initial Catalog=CDRAnalysisMobile_WF;User ID=walid;Password=P@ssw0rd;MultipleActiveResultSets=True;Application Name=EntityFramework"
        providerName="System.Data.SqlClient" />
-    <add name="MobileEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;server=192.168.110.240;user id=sa;password=iraq@cce$$1;persistsecurityinfo=True;database=CDRAnalysisMobile_WF&quot;"
+    <add name="MobileEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;server=192.168.110.185;User ID=walid;Password=P@ssw0rd;persistsecurityinfo=True;database=CDRAnalysisMobile_WF&quot;"
       providerName="System.Data.EntityClient" />-->
 
     <add name="CDRAnalysisMobileConnectionString" connectionString="server=192.168.110.241;user id=zain;password=zain123;persistsecurityinfo=True;database=CDRAnalysisMobile_WF"
