--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Web/TOne.BusinessEntity.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Web/TOne.BusinessEntity.Web.csproj
@@ -124,6 +124,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Client\Services\APIServices\BusinessEntityAPIService.js" />
+    <Content Include="Client\Views\TestNew.html" />
+    <Content Include="Client\Views\TestNewController.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
