git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22857

--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Entities/Vanrise.Fzero.FraudAnalysis.Entities.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Entities/Vanrise.Fzero.FraudAnalysis.Entities.csproj
@@ -49,8 +49,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AggregateDefinition.cs" />
     <Compile Include="CriteriaDefinition.cs" />
     <Compile Include="Enums.cs" />
+    <Compile Include="IAggregate.cs" />
     <Compile Include="NumberCriteriaBatch.cs" />
     <Compile Include="NormalCDR.cs" />
     <Compile Include="NumberProfileBatch.cs" />
