git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22859

--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Entities/Vanrise.Fzero.FraudAnalysis.Entities.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Entities/Vanrise.Fzero.FraudAnalysis.Entities.csproj
@@ -50,6 +50,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AggregateDefinition.cs" />
+    <Compile Include="AverageAggregate.cs" />
+    <Compile Include="SumAggregate.cs" />
+    <Compile Include="DistinctCountAggregate.cs" />
     <Compile Include="CriteriaDefinition.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="IAggregate.cs" />
@@ -58,6 +61,7 @@
     <Compile Include="NumberProfileBatch.cs" />
     <Compile Include="NumberProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CountAggregate.cs" />
     <Compile Include="Strategy.cs" />
     <Compile Include="SuspiciousNumber.cs" />
     <Compile Include="SuspiciousNumberBatch.cs" />
