git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22869

--- a/CDRAnalysis/Dependencies/Dependencies.csproj
+++ b/CDRAnalysis/Dependencies/Dependencies.csproj
@@ -46,6 +46,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Libraries\Antlr3.Runtime.dll" />
+    <Content Include="Libraries\ExpressionEvaluator.dll" />
     <Content Include="Libraries\log4net.dll" />
     <Content Include="Libraries\log4net.xml" />
     <Content Include="Libraries\Microsoft.Practices.EnterpriseLibrary.Common.dll" />
