--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.BP.Activities/Vanrise.Fzero.FraudAnalysis.BP.Activities.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.BP.Activities/Vanrise.Fzero.FraudAnalysis.BP.Activities.csproj
@@ -36,6 +36,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Antlr3.Runtime">
+      <HintPath>..\Dependencies\Libraries\Antlr3.Runtime.dll</HintPath>
+    </Reference>
+    <Reference Include="ExpressionEvaluator">
+      <HintPath>..\Dependencies\Libraries\ExpressionEvaluator.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Activities" />
