--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Entities/Vanrise.Fzero.FraudAnalysis.Entities.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Entities/Vanrise.Fzero.FraudAnalysis.Entities.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <Compile Include="AggregateDefinition.cs" />
     <Compile Include="AverageAggregate.cs" />
+    <Compile Include="Condition.cs" />
     <Compile Include="SumAggregate.cs" />
     <Compile Include="DistinctCountAggregate.cs" />
     <Compile Include="CriteriaDefinition.cs" />
