git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22895

--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Business/Vanrise.Fzero.FraudAnalysis.Business.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Business/Vanrise.Fzero.FraudAnalysis.Business.csproj
@@ -52,6 +52,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AggregateManager.cs" />
     <Compile Include="CriteriaManager.cs" />
     <Compile Include="FraudManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
