--- a/TOneV2/Code/TOneV2/TestRuntime/app.config
+++ b/TOneV2/Code/TOneV2/TestRuntime/app.config
@@ -182,9 +182,9 @@
     <add key="BusinessProcessTrackingDBConnStringKey" value="LogDBConnString"/>
     <add key="AddBusinessProcessConsoleTracking" value="true"/>
     <add key="DropOldRoutingDatabasesInterval" value="00:01:00"/>
-    <add key="BusinessProcessServiceHost" value="localhost:1849"/>
+    <add key="BusinessProcessServiceHost" value="localhost:1833"/>
     <add key="BusinessProcessDisabledNamedPipeService" value="true"/>
-
+    <add key="RepricingParallelThreads" value="5"/>
   </appSettings>
   <system.codedom>
     <compilers>
