--- a/CDRAnalysis/Vanrise.Fzero.DevRuntime/App.config
+++ b/CDRAnalysis/Vanrise.Fzero.DevRuntime/App.config
@@ -10,7 +10,7 @@
     <add name="TransactionDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=FZeroTransaction;Data Source=."/>
     <add name="QueueDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=FZeroQueue;Data Source=."/>
     <add name="LogDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=FZeroLog;Data Source=."/>
-    <add name="CDRDBConnectionString" connectionString="Data Source=192.168.110.185;Initial Catalog=CDRAnalysisMobile_WF;User ID=walid;Password=P@ssw0rd;MultipleActiveResultSets=True;Application Name=EntityFramework"
+    <add name="CDRDBConnectionString" connectionString="Data Source=192.168.110.240;Initial Catalog=CDRAnalysisMobile_WF;User ID=sa;Password=iraq@cce$$1;MultipleActiveResultSets=True;Application Name=EntityFramework"
        providerName="System.Data.SqlClient" />
     <add name="CDRDBConnectionStringMySQL" connectionString="server=192.168.110.241;user id=zain;password=zain123;persistsecurityinfo=True;database=CDRAnalysisMobile_WF"
   providerName="MySql.Data.MySqlClient" />
