Add FlaggedService object
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22951

--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Entities/TOne.BusinessEntity.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Entities/TOne.BusinessEntity.Entities.csproj
@@ -47,6 +47,7 @@
     <Compile Include="CarrierInfo.cs" />
     <Compile Include="Code.cs" />
     <Compile Include="CodeGroupInfo.cs" />
+    <Compile Include="FlaggedService.cs" />
     <Compile Include="IBusinessEntityInfoManager.cs" />
     <Compile Include="IZoneSupplied.cs" />
     <Compile Include="SupplierCodes.cs" />
