--- a/BusinessProcess/Code/Vanrise.BusinessProcess/Vanrise.BusinessProcess.csproj
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess/Vanrise.BusinessProcess.csproj
@@ -65,6 +65,10 @@
     <Reference Include="Vanrise.Runtime">
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Runtime.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Runtime.Entities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Runtime.Entities.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Base Classes\AsyncActivityStatus.cs" />
