--- a/TOneV2/Code/TOneV2/TestRuntime/app.config
+++ b/TOneV2/Code/TOneV2/TestRuntime/app.config
@@ -44,7 +44,7 @@
     <add name="LogDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneWFTracking;Data Source=."/>
     <!--<add name="RoutingDBConnStringTemplateKey" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneDevTest01_routing_{0};Data Source=."/>-->
     <!--<add name="RoutingDBConnStringTemplateKey" connectionString="Data Source=192.168.110.185;Initial Catalog=TOneSpactronNew_routing_{0};user id=development;password=dev!123"/>-->
-    <add name="RoutingDBConnStringTemplateKey" connectionString="Data Source=192.168.110.185;Initial Catalog=TOneDevTest01_routing_{0};user id=development;password=dev!123"/>
+    <add name="RoutingDBConnStringTemplateKey" connectionString="Data Source=192.168.110.185;Initial Catalog=ToneSpactronNew_routing_{0};user id=development;password=dev!123"/>
     <!--<add name="WFPersistence" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneWFPersistence;Data Source=."/>-->
   </connectionStrings>
 
@@ -185,6 +185,7 @@
     <add key="BusinessProcessServiceHost" value="localhost:1833"/>
     <add key="BusinessProcessDisabledNamedPipeService" value="true"/>
     <add key="RepricingParallelThreads" value="5"/>
+    <add key="RoutingCodePrefixLength" value="2"/>
   </appSettings>
   <system.codedom>
     <compilers>
